@@ -1,19 +1,18 @@
 .TP
 .B \-E
-Give file with rotation poles and opening angles.  This file must contain
+Give file with rotation parameters.  This file must contain
 one record for each rotation; each record must be of the following format:
 .br
 .sp
-	\fIlon lat tstart [tstop] ccw-angle\fP [ \fIkhat a b c d e f g df\fP ]
+	\fIlon lat tstart [tstop] angle\fP [ \fIkhat a b c d e f g df\fP ]
 .br
 .sp
-where \fItstart\fP and \fItstop\fP are in Ma and \fIlon lat ccw-angle\fP are
-in degrees.  For stage rotations the oldest stage must be listed first.  \fItstart\fP
-and \fItstop\fP are the ages of the old and young ends of a stage.  If OPT(C) is set then a total
+where \fItstart\fP and \fItstop\fP are in Myr and \fIlon lat angle\fP are in degrees.
+\fItstart\fP and \fItstop\fP are the ages of the old and young ends of a stage.  If OPT(C) is set then a total
 reconstruction rotation is expected and \fItstop\fP is implicitly set to 0 and
-should not be in the file.  If a covariance matrix \fBC\fP for the rotation is available
+should not be specified in the file.  If a covariance matrix \fBC\fP for the rotation is available
 it must be specified in a format using the nine optional terms listed in brackets.
 Here, \fBC\fP = (\fIg\fP/\fIkhat\fP)*[ \fIa b d; b c e; d e f\fP ] which shows \fBC\fP
 made up of three row vectors.
-If the degrees of freedom (\fIdf\fP) is 0 or not listed it is set to 10000.
+If the degrees of freedom (\fIdf\fP) in fitting the rotation is 0 or not given it is set to 10000.
 Blank lines and records whose first column contains # will be ignored.
